# transformer-dissected

./: .gitignore  LICENSE  README.md  config.py  dataset.py  model.py  pyproject.toml  train.py
